This is a long commit message to see what is displayed in bugbox when we just enter a really long string and it wraps in the content div.

--- a/shared/css/media.css
+++ b/shared/css/media.css
@@ -207,6 +207,7 @@ a pre { color: inherit; }
 .message .content {
     width: 100%;
     margin-left: 60px;
+    margin-right: 60px;
 }
 
 .message .header .author { font-weight: bold;}
